[package]
name = "arkanoid"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = "0.14.1"
bevy_rapier2d = "0.20.0"
bevy-inspector-egui = "0.17.0"
serde = "1.0.152"
anyhow = "1.0.69"
serde_json = "1.0.94"
